manifest/demo_service.yml
apiVersion: v1
kind: Service
metadata:
    name: api-01
    namespace: demo
spec:
    selector:
        app: api-01
    ports:
        -   protocol: TCP
            port: 9091
            targetPort: 9091
