manifest/demo_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo
  namespace: demo
 
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /v1/demo/bo/status
        pathType: Prefix
        backend:
          service:
            name: api-01
            port:
              number: 9092
